impl number section and pride section and improvment navbar component

--- a/src/component/Home.js/Header.css
+++ b/src/component/Home.js/Header.css
@@ -19,7 +19,7 @@ header h2{
     font-weight: bold;
 }
 header p{
-    color: #545454;
+    color: var(--third-color);
     margin: 0.938rem 0;
 }
 header button{
