--- a/src/component/Home.js/Home.css
+++ b/src/component/Home.js/Home.css
@@ -108,3 +108,53 @@
     color: var(--third-color);
     margin: 1.25rem 0;
 }
+/* foods section */
+.foods{
+    margin-top: 3.125rem;
+    padding: 1.563rem 0;
+    overflow: hidden;
+    width: 100%;
+    height: auto;
+}
+.foods .row:first-child{
+    text-align: center;
+    margin: 1.563rem 0;
+}
+.foods h2{
+    font-size: 2.188rem;
+    font-weight: bold;
+    margin: 0.625rem 0;
+    color: var(--second-color);
+    line-height: 3.125rem;
+    font-family: var(--second-font);
+}
+.foods p{
+    font-size:1rem;
+    line-height: 2rem;
+    color: var(--third-color);
+    margin: 1.25rem 0;
+}
+.foods img{
+    max-width: 100%;
+    border-radius: 0.625rem;
+}
+.foods h5{
+    color: var(--second-color);
+    font-size: 1.125rem;
+    font-weight: bold;
+    margin: 0.625rem 0 0 0;
+}
+.foods .time{
+    margin-bottom:0.625rem;
+    display: block;
+}
+.foods h3{
+    color: var(--primary-color);
+}
+.foods h3 span:last-child{
+    text-decoration: line-through;
+    color: var(--third-color);
+}
+.foods button{
+    margin-top: 1.125rem;
+}
