--- a/src/component/Home.js/Home.css
+++ b/src/component/Home.js/Home.css
@@ -158,3 +158,43 @@
 .foods button{
     margin-top: 1.125rem;
 }
+/* testimonials section */
+.testimonials{
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+    padding:1.563rem
+}
+.testimonials h2{
+    font-family: var(--second-font);
+    color: #fff;
+}
+.testimonials .carousel.slide{
+    background-color:#fff !important;
+    margin: 2.5rem 0;
+    border:1px solid #fff;
+    border-radius: 0.625rem;
+    height: auto;
+}
+.testimonials .carousel.slide .carousel-indicators{
+    top: 264px;
+}
+.testimonials img{
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 9.375rem;
+    margin-top:  1.375rem;
+}
+.testimonials .carousel-caption p{
+    font-family: var(--primary-font) !important;
+    color: var(--third-color);
+    letter-spacing: 0.081rem;
+    /* line-height: 1.875rem; */
+}
+.testimonials .carousel-caption h6{
+    color: var(--primary-color);
+    margin: 0.938rem 0;
+}
