--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -3,16 +3,28 @@
     border: 1px solid var(--primary-color);
     width: 100%;
     max-width: 100%;
-    padding:5.563rem 0;
+    padding:3.563rem 0;
 }
-.footer .row:first-child a{
+.footer .row:nth-of-type(1){
+    padding: 0.25rem 0;
+}
+.footer .row:nth-of-type(1) a{
     color: #fff !important;
     font-size: 1rem !important;
 }
-.footer .row:first-child a:hover{
+.footer .row:nth-of-type(1) a:hover{
     text-decoration: underline;
 }
-.footer .row:last-of-type{
+.footer .row:nth-of-type(2){
+    padding: 0.25rem 0;
+}
+.footer .row:nth-of-type(2) button{
+    color: #fff !important;
+}
+.footer .row:nth-of-type(3){
+    padding: 0.25rem 0;
+}
+.footer .row:nth-of-type(3){
     color: #fff;
     font-size: 0.813rem;
 }
