--- a/src/component/Navs/Navs.css
+++ b/src/component/Navs/Navs.css
@@ -4,6 +4,9 @@ nav{
     height: auto;
     max-width: 100%;
     border-radius: 0px;
+    -webkit-box-shadow: 0px 8px 7px -11px rgba(84,84,84,1);
+    -moz-box-shadow: 0px 8px 7px -11px rgba(84,84,84,1);
+    box-shadow: 0px 8px 7px -11px rgba(84,84,84,1);
 }
 nav a{
     color:var(--primary-color) !important;
